# s7app2

./: APP2.asv  APP2.m  APP2_Leg.avi  README.md  S.m  algo_jaco.m  animated_graph.m  app.asv  app.m  app_antho.m  app_nosymbole.m  compute_homo.m  get_homo_mats.m  get_homo_mats_v2.m  hat.m  labo3_eve.m  mat_homo.m  p_inv.m  pos_init.asv  pos_init.m  qs.txt  trajectoire_cubique.m
Matlab/: APP2.m  APP2_Leg.avi  algo_jaco.m  get_homo_mats.m  mat_jaco.m  trajectoire_cubique.m
ROS_APP/src/darwin_control/: CMakeLists.txt
ROS_APP/src/darwin_control/config/: darwin_name_joint.yaml
ROS_APP/src/darwin_control/src/: joint_subscriber.cpp  main.cpp  qs.txt
ROS_APP/src/darwin_control/src/lib/: DarwinCallback.cpp  DarwinReadFile.cpp  DarwinReadFile.h
ROS_APP/src/darwin_gazebo/launch/: darwin_gazebo.launch
drewcode/: app2.m
laboratoire_4/catkin_ws/src/darwin_control/: package.xml
laboratoire_4/catkin_ws/src/darwin_control/launch/: darwin_control.launch
laboratoire_4/catkin_ws/src/darwin_control/src/: joint_subscriber.cpp  main.cpp
laboratoire_4/catkin_ws/src/darwin_control/src/lib/: DarwinJoint.cpp  DarwinJointControl.cpp  DarwinMess.cpp
