<?xml version="1.0"?>
<package>
  <name>darwin_control</name>
  <version>1.0.0</version>
  <description>The darwin_control package</description>

  <maintainer email="pc@humarobotics.com">Philippe Capdepuy</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/darwin_control</url>

  <author email="pc@humarobotics.com">Philippe Capdepuy</author>


    <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>darwin_description</run_depend>
<!--  <run_depend>gazebo_ros</run_depend> -->


</package>
